--- a/Machine Learning/Run in NodeJS/Example 4 - Training Perceptron.html
+++ b/Machine Learning/Run in NodeJS/Example 4 - Training Perceptron.html
@@ -63,7 +63,7 @@
                 let x = [xPoints[i]];
                 let y = [yPoints[i]];
 
-                color = guess == 0 ? 'blue' : 'black';
+                let color = guess == 0 ? 'blue' : 'black';
 
                 plotter.plotPoints(1, x, y, color);
             }   
